Fix bug where the menu overlaps the page title on small mobile phones.

--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -80,20 +80,12 @@ html.nav-open {
 	-webkit-flex: 1;
 	-ms-flex: 1; 
     flex: 1;
-	
-    @media @tablet {
-		position: absolute;
-		top: 50%;
-		right: 0;
-		bottom: 0;
-		margin-top: -30px;
-    }
 }
 
 .widget[data-widget-type="extendednavigation"] {
 	@media @tablet {
 		position: relative;
-		z-index: 2;
+		z-index: 10;
 		height: 100%;
 	}
 }
@@ -120,7 +112,7 @@ html.nav-open {
 		background-color: transparent;
 		background-clip: content-box;
 		padding: 0;
-		margin: -11px 20px 0;
+		margin: -11px 0 0;
 		width: 28px;
 		height: 22px;
 		font-size: 26px;
@@ -308,6 +300,7 @@ html.nav-open {
 		.transition (all 0.5s ease);
 		
 		@media @tablet {
+			margin: 0 65px;
 			padding: 0.5em 0;
 			font-size: @font__navigation--font-size * 1.2;
 			line-height: @font__navigation--line-height * 1.2;
